<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_curr_weather"
            android:icon="@drawable/ic_menu_cur_weather"
            android:title="@string/current_weather" />
        <item
            android:id="@+id/nav_ten_day"
            android:icon="@drawable/ic_ten_day_forcast"
            android:title="@string/ten_day_forecast" />



    </group>
    <group android:id="@+id/appInfoNavItems">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


    </group>
    <group android:id="@+id/nav_sign_out_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out_menu" />

    </group>

</menu>