<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <TextView
        android:id="@+id/tvLabelFavoriteLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/favorite_locations"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemCurrentCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvLabelFavoriteLocations"
        android:text="@string/current_cityd"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvItemCityTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvItemCurrentCity"
        android:text="@string/second_city"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvItemCityThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvItemCityTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/third_city"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/add_city" />



</RelativeLayout>